fix image sizes on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -75,7 +75,7 @@ div {
 
 .media-box {
 	background-color: #091b35;
-	margin: 3% 3% 3% 3%;
+	margin: 0 3% 3% 3%;
 }
 .navbar {
 	margin-top:2%;
@@ -168,8 +168,10 @@ ol {
 img {
 	border-radius: 2rem;
 	width:400px;
+	margin:auto;
+	display:block;
 }
-@media only screen and (max-width: 1020px) {img {width:70%;}}
+@media only screen and (max-width: 1020px) {img {width:90%;}}
 .clearfix::after {
 	content: "";
 	clear: both;
